fixed header video overflow

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -63,6 +63,7 @@ header {
     position: relative;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 .header-video-overlay {
     position: absolute;
